--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     <img src="/chatUol/imgs/logo.png" alt="logo UOL">
     <ion-icon name="people" class="toggle-sidebar"></ion-icon>
 </div>
-<div class="container-chat"></div>
+<div class="container-chat telaMensagens"></div>
 <div class="rodape">
-    <input type="text" placeholder="Escreva aqui...">
+    <input type="text" class="mensagem" placeholder="Escreva aqui...">
     <ion-icon name="send-outline"></ion-icon>
+    <button  onclick="enviarMensagem()">TESTE</button>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
