--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 </div>
 <div class="container-chat telaMensagens"></div>
 <div class="rodape">
-    <input type="text" class="mensagem" placeholder="Escreva aqui...">
-    <ion-icon name="send-outline"></ion-icon>
-    <button  onclick="enviarMensagem()">TESTE</button>
+    <input type="text" class="text" placeholder="Escreva aqui...">
+    
+    <button  onclick="enviarMensagem()"><ion-icon name="send-outline" ></ion-icon></button>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
