update:  atualiza lista a cada dez segundos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <div class="background"></div>
         <div class="participantes">
             <h1 class="contato">Escolha um contato para enviar a mensagem:</h1>
-            <div class="lista-participantes"></div>
+            <div class="lista-participantes">
+                <li class="item-fixo">
+                    <ion-icon name="people-sharp"></ion-icon>
+                    <p>Todos participantes</p>
+                </li>
+            </div>
             <h1 class="visibilidade">Escolha a visibilidade</h1>
             <div class="open">
                 <ion-icon name="lock-open-outline"></ion-icon>
