adc: opção de selecionar

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
                 </li>
             </div>
             <h1 class="visibilidade">Escolha a visibilidade</h1>
-            <div class="open">
-                <ion-icon name="lock-open-outline"></ion-icon>
-                <p>Público</p>
-            </div>
-            <div class="closed">
-                <ion-icon name="lock-closed-outline"></ion-icon>
-                <p>Reservadamente</p>
-            </div>
+            <ul class="visibility-options">
+                <li data-type="public">
+                    <ion-icon name="lock-open"></ion-icon>
+                    <span>Público</span>
+                </li>
+                <li data-type="private">
+                    <ion-icon name="lock-closed"></ion-icon>
+                    <span>Reservadamente</span>
+                </li>
+            </ul>
         </div>
     </div>
 
